--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^15.5.1",
     "headroom.js": "^0.12.0",
     "moment": "^2.29.1",
+    "netlify-cli": "^13.1.6",
     "next": "^13.2.1",
     "nouislider": "^15.2.0",
     "react": "^18.2.0",
@@ -39,6 +40,7 @@
     "sharp": "^0.31.3"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.32.2",
     "@types/babel__core": "^7.20.0",
     "@types/headroom.js": "^0.12.2",
     "@types/node": "^18.14.1",
